Bug 338498 - [client] blue dojo styling for "More" menu looks out of place

--- a/bundles/org.eclipse.orion.client.core/static/commands.css
+++ b/bundles/org.eclipse.orion.client.core/static/commands.css
@@ -1,7 +1,3 @@
-.domCommandToolbar {
-	height: 24px;
-}
-
 .commandImage {
 	margin-left: 2px;
 	margin-right: 2px;
@@ -58,21 +54,28 @@
 	text-decoration: underline;
 }
 
-
-.commandMenu {
-	color: #666666;
-	height: 28px;
+.soria .dijitMenu, .soria .dijitMenuBar {
+    background-color: #FFFFFF;
+    border: 1px solid #888787;
+    margin: 0;
+    padding: 0;
 }
 
-.commandMenu li {
-	height: 28px;
-	float: left;
-	margin-left: 2px;
-	margin-right: 2px;
-	margin-top: 9px;
-	margin-bottom: 0px;
+.soria .dijitMenuItem {
+    color: black;
+    font-family: sans-serif;
+    margin: 0;
 }
 
-.commandSubMenu {
-	float: block;
+.soria .dijitMenuPassive .dijitMenuItemHover, .soria .dijitMenuItemSelected {
+    background-color: #fedda7;
+    color: black;
+}
+
+soria .dijitButtonHover .dijitButtonNode, .soria .dijitButtonNodeHover, .soria .dijitToggleButtonHover .dijitButtonNode, .soria .dijitDropDownButtonHover .dijitButtonNode, .soria .dijitButtonContentsHover, .soria .dijitUpArrowButtonHover, .soria .dijitDownArrowButtonHover {
+    background: #ededed;
+    color: black;
+}
+.soria .dijitButtonActive .dijitButtonNode, .soria .dijitToggleButtonActive .dijitButtonNode, .soria .dijitDropDownButtonActive .dijitButtonNode, .soria .dijitComboButtonActive .dijitButtonContents, .soria .dijitStackController .dijitToggleButtonChecked .dijitButtonNode {
+    background: #ededed;
 }
